# ICD-Mappings

./: .gitignore  ICDCodesGrouper.py  ICDMappings.py  Playground.ipynb  README.md  pyproject.toml  sample_mimic_50_rows.csv  toy_diagnoses_dataset.csv
.ipynb_checkpoints/: CodesGrouper_Playground-checkpoint.ipynb  ICDMappings-checkpoint.py  Playground-checkpoint.ipynb  README-checkpoint.md
data_sources/: icd9-CM-code-chapter-en=PT.csv
data_sources/ICD-9-CM-v32-master-descriptions/: readme.md
grouper_data/: CCS-SingleDiagnosisGrouper.txt
icd_mappings/: icd9dx2015.csv  icd9toicd10cmgem.csv
icdmappings/: __init__.py  icdmappings.py
icdmappings/data_files/: cci2015.csv  icd10-chapters.csv
icdmappings/data_files/ICD10_CM_Blocks/: block_lookup.json  block_name_lookup.json
icdmappings/data_files/ICD10_CM_CCSR/: dx_cat1_mapping.json
icdmappings/data_files/ICD10_CM_Chapters/: chapter_lookup.json  chapter_name_lookup.json
icdmappings/data_files/ICD_10_CM_2024_release/: readme.md
icdmappings/mappers/: __init__.py  icd10_to_blocks.py  icd10_to_ccir.py  icd10_to_ccsr.py  icd10_to_chapters.py  icd10_to_icd9.py  icd9_to_cci.py  icd9_to_ccs.py  icd9_to_chapters.py  icd9_to_icd10.py  icd9_to_level3.py  icd9level3_to_cci.py  icd9level3_to_ccs.py  lol.ipynb  mapper_interface.py
icdmappings/validators/: __init__.py  icd10_validator.py  icd9_validator.py  icd_validator_interface.py
tests/: test_icd10_to_blocks.py  test_icd10_to_ccir.py  test_icd10_to_ccsr.py  test_icd10_to_chapters.py  test_icd10_to_icd9.py  test_icd9_to_cci.py  test_icd9_to_ccs.py  test_icd9_to_chapters.py  test_icd9_to_icd10.py  test_icd9_to_level3.py  test_icd9_validator.py  test_icd9level3_to_cci.py  test_icd9level3_to_ccs.py  test_mapper.py  test_validator.py
