[tool.poetry]
name = "icd-mappings"
version = "0.1.1"
description = "This python tools allows you to map icd codes between versions (9 and 10) and also to other coding schemas such as CCS (Clinical Classification Software))"
authors = ["Simao Novais <snovaisg.97@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/snovaisg/ICDMappings"
packages = [{include = "icdmappings"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
