[tool.poetry]
name = "icd-mappings"
version = "0.3.1"
description = "This python tools allows you to map ICD codes between versions (ICD9 <-> ICD10) and also to other coding schemas such as CCS (Clinical Classification Software) and CCI (Chronic Condition Indicator)"
authors = ["Simao Novais <snovaisg.97@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/snovaisg/ICDMappings"
packages = [{include = "icdmappings"}]
include = ["data_sources/*"]

[tool.poetry.dependencies]
python = "^3.8"
importlib-resources = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
