[tool.poetry]
name = "icd-mappings"
version = "0.4.0"
description = "This python tool enables a variety of mappings between ICD diagnostic codes (International Classification of Diseases) with a single line of code."
authors = ["Simao Novais <snovaisg.97@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/snovaisg/ICDMappings"
packages = [{include = "icdmappings"}]
include = ["data_sources/*"]

[tool.poetry.dependencies]
python = "^3.8"
importlib-resources = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
